fix: Also shifted the numbering to the left. Is part of previous fix;

--- a/src/@koop-components/common/list/_list.scss
+++ b/src/@koop-components/common/list/_list.scss
@@ -118,7 +118,7 @@ ol {
     font-weight: 700;
     display: inline-block;
     position: absolute;
-    left: -1.5em;
+    left: -3.5em;
     width: 3.5em;
   }
 
